# clawpanel

./: package-lock.json  package.json
docs/: ROADMAP-v0.9.md  index.html
scripts/: dev-api.js
src/: main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: agent.rs  config.rs  service.rs  update.rs
src/components/: sidebar.js
src/lib/: model-presets.js  tauri-api.js
src/locales/: zh-CN.json
src/locales/modules/: chat.js
src/pages/: chat.js  dashboard.js  gateway.js  models.js  settings.js  setup.js
src/style/: chat.css  variables.css
